---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "in0",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "tuple",
        "fields": [
          {
            "kind": "field"
          },
          {
            "kind": "field"
          }
        ]
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62SQQ6AMAgErfFBUMDCza/Y2P7/Cca0NWr0ZCch3Da7C24ojHUaru6lboKZOQWfkHAFb1EFWOKsqCgqm1eipKzBogUwZEqYxShD4UsX/oGunxZc4p9d9Mrf0SeOHTMfvqbHbd56cMP9Pxo7oALZ8UACAAA=",
  "debug_symbols": "dY/dCoMwDIXfJde9GOwPfJUxJNYohZCW2ApDfPdF0U0Gu0pPvn6HdoKWmtLXQbo4QPWYoNHAHPqao8ccoth2mh3ssc5KZCs4cLMSKkmGSgqzgxG5rJeGhLLOjGr05ICktWmFXWBaTrP72qf/6u2yuffzR76a/bSEPujve0fUgA3TFrsi/kDzK+1k/2/S6KktSkvTyqz7DQ==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
